# splicerr

./: .gitignore  README.md  RELEASE_NOTES_1.0.14.md  RELEASE_NOTES_1.0.15.md  RELEASE_NOTES_1.15.0.md  RELEASE_NOTES_1.15.1.md  package.json  pnpm-lock.yaml  tailwind.config.ts
.github/workflows/: build-macos-test.yml  release.yml
plugins/splicerr-daw-bridge/: CMakeLists.txt  README.md
plugins/splicerr-daw-bridge/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
scripts/: stress-transpose-render.mjs
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/plugins/: README.md
src-tauri/resources/plugins/Splicerr Bridge.component/Contents/: Info.plist
src-tauri/src/: lib.rs
src/lib/components/: asset-category-select.svelte  audio-player.svelte  bpm-select.svelte  collections-sidebar.svelte  key-select.svelte  new-collection-dialog.svelte  pack-preview.svelte  search-input.svelte  settings-dialog.svelte  sort-select.svelte  tag-badge.svelte  theme-select.svelte  toaster.svelte  transpose-dialog.svelte  waveform.svelte
src/lib/shared/: audio-render-worker-client.ts  audio-render-worker.ts  collections.svelte.ts  config.svelte.ts  daw-sync.svelte.ts  drag.svelte.ts  export.svelte.ts  files.svelte.ts  store.svelte.ts  toasts.svelte.ts  transpose.svelte.ts  view.svelte.ts  wav.ts
src/lib/splice/: api.ts  types.d.ts
src/routes/: +layout.svelte  +page.svelte  sample-list-entry.svelte
(+7 files in other folders)
